--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-/build
-/src/generated
-/.classpath
-/.project
-/.settings/
-/settings.gradle
-/gradlew.bat
-/gradlew
-/gradle/wrapper
-/.gradle/2.1/taskArtifacts
+build
+src/generated
+.classpath
+.project
+.settings/
+settings.gradle
+gradlew.bat
+gradlew
+gradle/wrapper
+.gradle/2.1/taskArtifacts
+src/main/resources/namespace-prefix.xjb
+src/main/resource/schemas
